Add methods for the token
